Fix header spacing

--- a/styles.css
+++ b/styles.css
@@ -58,13 +58,8 @@ h2 {
 .header4 {
   padding-left: 5px;
   padding-right: 5px;
-  max-width: 100%;
 }
 
-.header1,
-.header4 {
-  flex: 1;
-}
 
 .header2,
 .header3 {
